--- a/templates/xedemo/invoice.tex
+++ b/templates/xedemo/invoice.tex
@@ -108,7 +108,8 @@ Fax: <?lsmb shiptofax ?>
 
 \vspace{1cm}
 
-\textbf{\MakeUppercase{<?lsmb text('Invoice') ?>}}
+\textbf{\MakeUppercase{<?lsmb IF reverse; text('Credit Invoice');
+    ELSE; text('Invoice'); END; ?>}}
 \hfill
 
 \vspace{1cm}
@@ -151,6 +152,7 @@ Fax: <?lsmb shiptofax ?>
   <?lsmb discountrate.${lc} ?> &
   <?lsmb linetotal.${lc} ?> \\
 <?lsmb END ?>
+<?lsmb IF tax ?>
 \hline \hline
 \multicolumn{8}{r|}{<?lsmb text('Subtotal') ?>} & <?lsmb subtotal ?> \\*
 <?lsmb FOREACH tax ?>
@@ -159,13 +161,15 @@ Fax: <?lsmb shiptofax ?>
                     ?>  on <?lsmb taxbase.${lc} ?> }
  & <?lsmb tax.${lc} ?> \\*
 <?lsmb END ?>
-<?lsmb IF paid ?>
-\multicolumn{8}{r|}{ <?lsmb text('Paid') ?> } & - <?lsmb paid ?> \\*
 <?lsmb END ?>
-<?lsmb IF total ?>
+\hline \hline
+\multicolumn{8}{r|}{<?lsmb text('Total') ?>} & <?lsmb invtotal ?> \\*
+
+<?lsmb IF paymentdate.0 ?>
+\multicolumn{8}{r|}{ <?lsmb text('Paid') ?> } & - <?lsmb paid ?> \\*
   \hline
   \hline
-\multicolumn{8}{r|}{<?lsmb text('Balance Due') ?>} & <?lsmb total ?>\\
+\multicolumn{8}{r|}{<?lsmb text('Balance') ?>} & <?lsmb total ?>\\
 <?lsmb END ?>
 
 \end{longtable}
@@ -193,19 +197,17 @@ Fax: <?lsmb shiptofax ?>
 
 \vfill
 
-<?lsmb IF paid_1 ?>
+<?lsmb IF paymentdate.0 ?>
 \begin{tabularx}{10cm}{@{}lXlr@{}}
   \textbf{<?lsmb text('Payments') ?>} & & & \\
   \hline
   \textbf{<?lsmb text('Date') ?>} & & \textbf{<?lsmb text('Source') ?>} 
   & \textbf{<?lsmb text('Amount') ?>} \\
-<?lsmb END ?>
 <?lsmb FOREACH payment ?>
 <?lsmb lc = loop.count - 1 ?>
   <?lsmb paymentdate.${lc} ?> & <?lsmb paymentaccount.${lc} ?> & <?lsmb paymentsource.${lc} ?> & <?lsmb payment.${lc} ?> \\
-<?lsmb END ?>
-<?lsmb IF paid_1 ?>
 \end{tabularx}
+<?lsmb END ?>
 <?lsmb END ?>
 
 \vspace{1cm}
