--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,12 @@
 Changelog for 1.4 Series
 Released 2014-09-15
 
+Changelog for 1.4.40
+* Fix name of the sequence being updated in the 1.3 migration script (Erik H)
+
+Erik H is Erik Huelsmann
+
+
 Changelog for 1.4.39
 * Fixed searching for approved batches (Chris T, #2592)
 * Don't cache per-company (from database) templates (Erik H, #2573)
