--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.4.41+ds-0~2) UNRELEASED; urgency=low
+ledgersmb (1.4.41+ds-1) unstable; urgency=low
 
   * New Upstream Release
     - Resolves Perl related issue regarding 'current directory' no longer being
@@ -13,7 +13,7 @@ ledgersmb (1.4.41+ds-0~2) UNRELEASED; urgency=low
   * Correct the debian/changelog entry for v1.4.34+ds-1, adding that it was
     for a new upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 11 May 2017 10:18:02 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 11 May 2017 14:35:11 -0400
 
 ledgersmb (1.4.34+ds-2) unstable; urgency=medium
 
