--- a/debian/changelog
+++ b/debian/changelog
@@ -1,25 +1,33 @@
-ledgersmb (1.5.7+ds-0~1) UNRELEASED; urgency=low
+ledgersmb (1.5.8+ds-0~1) UNRELEASED; urgency=low
 
   * TODO:
     - Adapt package to the new 1.5.x series upstream.
-      * Update installation of a apache-vhost.conf file.
-      * Update installation of a starman-ledgersmb.service file.
+      * Update debian/watch for new upstream location. (#868724)
   * New Upstream Release
-    - Along with a requirement for liblatex-driver-perl >= 0.300.2, resolves the
-      issue with printing to PDF or Postscript. (Closes: # 821251)
+    - Along with an explicit requirement for liblatex-driver-perl >= 0.300.2,
+      resolves the issue with printing to PDF or Postscript. (Closes: # 821251)
   * Add '--with systemd' to dh invocation line in debian/rules
-  * Adapt maintence scripts for new 1.5.x series upstream.
+  * Adapt maintenance scripts for new 1.5.x series upstream.
+  * Add an initial version of a debian/ledgersmb.init file.
   * Add ledgersmb-nginx and ledgersmb-apache maintainer scripts.
-  * Rewrite debian/patches/10_httpdconf.patch for new upstream version.
-  * Update the links in debian/ledgesrmb.links related to embedded dojo files.
-  * Update 'Files-Excluded' in debian/copyright related to embedded dojo files.
+  * Rewrite and/or rename or delete debian/patches/* for new upstream version.
+  * Removed debian/adm/apache-vhost.conf as it is in upstream.
+  * Remove debian/ledgersmb.starman-ledgersmb.service as it is in upstream
+    and add installing a patched version one from upstream.
+  * Update the links in debian/ledgersmb.links related to embedded dojo files.
+  * Update 'Files-Excluded' in debian/copyright related to embedded dojo files
+    and unneeded empty directories.
   * Changes in debian/control:
-    - Include 'libmoosex-nonmoose-perl' as a Depends
+    - Declare compliance with Debian Policy 4.0.0.
+    - Include 'libmoosex-nonmoose-perl' as a 'Depends'.
     - Include 'libcgi-emulate-psgi-perl' as a 'Depends'.
-    - Move web server requirement from 'Depends' to 'Suggests'.
-    - Add stanzas for ledgersmb-nginx and ledgersmb-apache packages.
+    - Include 'libplack-builder-conditionals-perl' as a 'Depends'.
+    - Change 'Maintainer' to ledger-smb-devel@lists.sourceforge.net LedgerSMB
+      Developer mailing list.
+    - Add stanzas for ledgersmb-nginx and ledgersmb-apache packages and set
+      them as Suggests for the main binary package.
     - Update dojo requirement from libjs-dojo-dojox to libjs-dojo-dijit.
-    - Drop explicit 'Depends' on 'liberror-perl' in as not being necessary.
+    - Drop explicit 'Depends' on 'liberror-perl' as not being necessary.
     - Drop the version being required for the Perl requirement in 'Depends'.
     - Explicitly add 'liblatex-driver-perl (>= 0.300.2)' to Recommends section.
     - Include the PGObject* Perl modules required for the new 1.5.x series
@@ -28,7 +36,7 @@ ledgersmb (1.5.7+ds-0~1) UNRELEASED; urgency=low
       libpgobject-type-bytestring-perl, libpgobject-type-datetime-perl,
       libpgobject-util-dbmethod-perl, and libpgobject-util-dbadmin-perl.
 
- -- Robert James Clay <jame@rocasa.us>  Fri,  9 Jun 2017 09:37:15 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 20 Jul 2017 03:19:52 -0400
 
 ledgersmb (1.4.41+ds-1) unstable; urgency=low
 
