New upstream version 1.5.10+ds

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,22 @@
 Changelog for 1.5 Series
 Released 2016-12-24
 
+Changelog for 1.5.10
+* Fix loading image URL taken from Dojo 1.12 (instead of 1.10) (Erik H)
+* Fix mails being sent with non-unique Message-IDs (Erik H, #3041)
+* Round-trip fewer values over web requests during migration (Erik H)
+* Migrate accounting <-> invoice relationship from LSMB 1.2/SL (Erik H/Yves L)
+* Fix 500 ISE on bottom of order when creating from vendor (Erik H, #3057)
+* Contact info now properly HTML-escaped (Erik H, #2820)
+* Add check for cr_coa_to_account primary key to 1.3 migration (Erik H, #2663)
+* Add work-around to PGOld for PGObject::Simple 2.x incompatibility (Chris T)
+* Fix missing asset classes on Depreciate and Disposal screens (Erik H, #3123)
+
+Erik H is Erik Huelsmann
+Yves L is Yves Lavoie
+Chris T is Chris Travers
+
+
 Changelog for 1.5.9
 * Fix goods/services search with AR/AP invoices (Chris T, #2938)
 * Fix inventory activity report drill down over-inclusive (Chris T, #2926)
@@ -212,6 +228,11 @@ Released 2014-09-15
 Changelog for 1.4.42
 * Fix goods/services search with AR/AP invoices (Chris T, #2938)
 * Fix ar/ap not searchable by part number (Chris T, #2926)
+* Round-trip fewer values over web requests during migration (Erik H)
+* Bank account info now properly HTML-escaped (Erik H, #2820)
+
+Chris T is Chris Travers
+Erik H is Erik Huelsmann
 
 
 Changelog for 1.4.41
