--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,19 @@
 Changelog for 1.4 Series
 Released 2014-09-15
 
+Changelog for 1.4.42
+* Fix goods/services search with AR/AP invoices (Chris T, #2938)
+* Fix ar/ap not searchable by part number (Chris T, #2926)
+* Round-trip fewer values over web requests during migration (Erik H)
+* Bank account info now properly HTML-escaped (Erik H, #2820)
+* Ensure forked sub-processes to be correctly terminated (Erik H)
+* Fix missing content in columns of the outstanding report (Erik H, #2585)
+* Fix contacts search ignores e-mail and phone filters (Erik H, #2821)
+* Fix contacts search by address data doesn't work (Erik H, #2490)
+
+Chris T is Chris Travers
+Erik H is Erik Huelsmann
+
 
 Changelog for 1.4.41
 * Fix 'Bad interval' error with PNL comparisons (Erik H, #2146)
@@ -85,6 +98,7 @@ Changelog for 1.4.34
 * Add test and hard fail with error if tempdir permissions aren't sane. (David G)
 
 Erik H is Erik Huelsmann
+David G is David Godfrey
 
 
 Changelog for 1.4.33
@@ -93,6 +107,9 @@ Changelog for 1.4.33
 * Fixed "save draft" buttons not showing (Chris T, #994)
 * Fixed error reopening books across multiple closings (Chris T #2025)
 * Fixed moose error in timecard with qty mising (Chris T, #2048)
+
+Chris T is Chris Travers
+
 
 Changelog for 1.4.32
 * Moved to findbin from use lib '.' (Chris T, #1911)
@@ -322,7 +339,6 @@ NickP is Nick Prater
 Rami H is Rami Hovi
 
 
-
 Changelog for 1.4.17
 * FEATURE: Automatic calculation of taxes in AR/AP transactions (ErikH)
 * FEATURE: Use account hierarchies in balance and PnL reporting (ErikH)
@@ -476,6 +492,10 @@ John L is John Locke
 
 Changelog for 1.4.9
 * Fixed issue with contacts not loading in 1.4,8 (regression, Chris T)
+* Removed optional dependency on LaTeX from starman preload (Chris T)
+
+Chris T is Chris Travers
+
 
 Changelog for 1.4.8
 * Fixed end-date not a date widget on employee div (Chris T)
@@ -603,6 +623,7 @@ Chris T is Chris Travers
 Erik H is Erik Huelsmann
 Pongracz I is Pongracz Istvan
 
+
 Changelog for 1.4.0
 General Enhancements:
 * Performance enhancements on menu routines (Chris T and Steven M)
@@ -635,7 +656,7 @@ Enhancing data integrity
 
 Control Code Series System (Chris T)
 * Covers invoices, orders, transactions, parts, and business units
-* Have many different series for the same field (i.e. several series of 
+* Have many different series for the same field (i.e. several series of
    partnumbers
 * Each can set whether it overrides user input.
 
@@ -729,6 +750,7 @@ Changelog for 1.3.46
 Chris T is Chris Travers
 John L is John Locke
 Pongracz I is Pongracz Istvan
+
 
 Changelog for 1.3.45
 * Cleaned up sql files so App::LedgerSMB::Admin works (Chris T)
@@ -985,7 +1007,7 @@ Nick P is Nick Prater
 
 Changelog for 1.3.31
 * Removed spurious commit saving orders (Chris T)
-* Removed check for reversing too many sales, since this poses problems 
+* Removed check for reversing too many sales, since this poses problems
   in corner cases with no good solutions (Chris T)
 * R5680-1, (tentatively) fixes to shipping/invoice onhand numbers (Chris T)
 * Fixed customer search showing sales rather than billing addresses (Chris T)
@@ -996,7 +1018,7 @@ Changelog for 1.3.31
 * Fixed handling of translation strings in Contact Search (Chris T, 3604721)
 * Fixed handling of spaces in debit/credit cols/gl (Chris T, 3607219)
 * Fixed handling of invoice numbers on recurring (Chris T, 3602382)
-* Fixed language code changes delayed (Chris T, 3607220) 
+* Fixed language code changes delayed (Chris T, 3607220)
 * Fixed order by on reconciliation screen not working (Chris T, 3607223)
 * Fixed country changes to companies not saving (Chris T, 3607437)
 * Fixed customer search on address data (Chris T, 3607436)
@@ -1030,7 +1052,7 @@ Chris T.
 * Fixed net-0 transactions not showing up on search (Chris T, 3600700)
 * Fixed incorrect recommendation in Makefile.PL (Chris T, h.t Havard S and
 Robert C)
-* Fixed contact info addition workflow.  Now entering multiple contact records 
+* Fixed contact info addition workflow.  Now entering multiple contact records
 is not a total pain(Chris T)
 * Fixed lines 2 and 3 not showing on address div for contacts (Chris T)
 * Fixed credit limit not accounting for some payments (Chris T, 3600679)
@@ -1068,7 +1090,7 @@ Changelog for 1.3.27
 * Fixed error sorting recon search by account (Chris T, h/t Erik H, 3589473)
 * Users are now migrated with nonsense passwords from 1,2 (Chris T, 3587257)
 * Upgrade now handles new total column in jcitems properly (Chris T)
-* Fixed configure_apache.sh, read input, change of file name from 
+* Fixed configure_apache.sh, read input, change of file name from
   ledgersmb-httpd.conf to ledgersmb-httpd.conf.template (Havard S)
 * Update INSTALL - section "Adding configuration to Apache 2.x" (Havard S)
 * Fixed bad targets of AP Aging and Tax Paid reports (Chris T, 3594694)
@@ -1085,7 +1107,7 @@ Havard S is Havard Sorli
 Changelog for 1.3.26
 * Added db statistics post-upgrade and pre/post rebuild (Chris T, 3586113)
 * Merged in fcgi support from addons (Chris T)
-* Clarified UI for changing password vs settings (Chris T, 3588810) 
+* Clarified UI for changing password vs settings (Chris T, 3588810)
 * Fixed eca selection issues when creating invoices (Chris T, 3588301)
 * Added demo templates with for invoices with attached images (Chris T)
 * Fixed attached images not appearing in templates (Chris T)
@@ -1180,7 +1202,7 @@ Chris T is Chris Travers
 Havard S is Havard Sorli
 Erik H is Erik Huelsmann
 Istvan P is Istvan Pongracz
-Brian W is Brian Wolf 
+Brian W is Brian Wolf
 Nick P is Nick Prater
 Robert C is Robert James Clay
 
@@ -1823,7 +1845,7 @@ Changelog for 1.2.21
 * Fixed bug saving SIC (Adam T)
 
 Changelog for 1.2.20
-* Commented out credits in ledgersmb-blue.css 
+* Commented out credits in ledgersmb-blue.css
 * Corrected encoding in Latvian chart of accounts (Janeks)
 * Minor fixes to release notes (SF User akaihola)
 * Exchange rate fix (SF User Anarcat)
@@ -1906,7 +1928,7 @@ Changelog for 1.2.11
 * Fixed encoding errors in numeral to text conversion (Seneca)
 * Fixed the displayed number format for AP invoice taxes (Seneca)
 * Fixed the selection of taxes when validto is involved (Seneca, anarcat's
-addition to 1818792) 
+addition to 1818792)
 
 Changelog for 1.2.10
 * Fixed bug 1765161, post button duplicates invoices.(Chris T)
@@ -2117,7 +2139,7 @@ Point of Sale:
 * Added pole display and separate cash drawer open calls. (Chris T)
 
 User Interface:
-* Moved IS/IR/OE the lineitem column list to the LedgerSMB::Sysconfig Chris T) 
+* Moved IS/IR/OE the lineitem column list to the LedgerSMB::Sysconfig Chris T)
 * Invoice now has an Onhand column (Chris T)
 * Added simple text import function for invoices received (PDT's) (Chris T)
 
@@ -2134,7 +2156,7 @@ Changelog for LedgerSMB 1.1.1
 
 * Fixed problem with parts_short trigger not being created
 * Fixed problem with custom fields functions not being created
-* Pg driver is now checked by default. 
+* Pg driver is now checked by default.
 
 Changelog for LedgerSMB 1.1.0
 
@@ -2183,7 +2205,7 @@ Changelog for LedgerSMB v 1.0.0
 * Changed acc_trans.amount to NUMERIC
 * Tightened browser caching rules to prevent problems with back button.
 * Added an open content manual to the main distribution.
-* New logo. 
+* New logo.
 * Began whitespace reformatting of main application.
 
 
