--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.42+ds-1~1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Sun, 17 Sep 2017 17:15:42 -0400
+
 ledgersmb (1.4.41+ds-1) unstable; urgency=low
 
   * New Upstream Release
