--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-ledgersmb (1.4.42+ds-1~1) UNRELEASED; urgency=low
+ledgersmb (1.4.42+ds-1~2) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Declare compliance with Debian Policy 4.1.1
+  * Update debian/watch for correct 'new' upstream at GitHub.
+  * Remove 'Vcs-Svn' entry from debian/control as no longer necessary.
+  * Update Vcs-Browser in debian/control for correct 'new' upstream at GitHub.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 17 Sep 2017 17:15:42 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 07 Oct 2017 12:31:09 -0400
 
 ledgersmb (1.4.41+ds-1) unstable; urgency=low
 
